--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
 spring.datasource.url=jdbc:postgresql://dpg-cgcjuge4dad6fr5bpvng-a.oregon-postgres.render.com:5432/dogpm05
-spring.datasource.username= username generated in render after creating the PostgreSQL
-spring.datasource.password= username generated in render after creating the PostgreSQL
+spring.datasource.username= dogpm05_zqb9_user
+spring.datasource.password= zKxjEWK5aLquEZzQwadHt85LXUpQyQK4
 spring.datasource.driver-class-name=org.postgresql.Driver
