--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-cgcjuge4dad6fr5bpvng-a.oregon-postgres.render.com:5432/dogpm05
+spring.datasource.url=jdbc:postgresql://dpg-cgcjuge4dad6fr5bpvng-a.oregon-postgres.render.com:5432/dogpm05_zqb9
 spring.datasource.username= dogpm05_zqb9_user
 spring.datasource.password= zKxjEWK5aLquEZzQwadHt85LXUpQyQK4
 spring.datasource.driver-class-name=org.postgresql.Driver
