--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-clhadet8td7s73bndptg-a.oregon-postgres.render.com:5432/dogpm05_zqb9
-spring.datasource.username=dogpm05_zqb9_user
-spring.datasource.password=zKxjEWK5aLquEZzQwadHt85LXUpQyQK4
+spring.datasource.url=jdbc:postgresql://dpg-clhqeul8td7s73bqke2g-a.oregon-postgres.render.com:5432/dogpm01
+spring.datasource.username=dogpm01_user
+spring.datasource.password=hixnykZdBiODufFqUxxTr1rwUcGYq91J
 spring.datasource.driver-class-name=org.postgresql.Driver
 
